cockroachlabs-preview-main/docs/v23.2/log-sql-activity-to-datadog.mdx
---
title: "Log SQL Activity to Datadog"
old_description: "Examples of common logging use cases and possible CockroachDB logging sink configurations."
---

This tutorial describes how to configure logging of telemetry events, including [`sampled_query`](/docs/v23.2/eventlog#sampled_query) and [`sampled_transaction`](/docs/v23.2/eventlog#sampled_query), to [Datadog](https://www.datadoghq.com/) for finer granularity and long-term retention of SQL activity. The `sampled_query` and `sampled_transaction` events contain common SQL event and execution details for [statements](/docs/v23.2/sql-statements) and [transactions](/docs/v23.2/transactions).

CockroachDB supports a built-in integration with Datadog which sends these events as logs via the [Datadog HTTP API](https://docs.datadoghq.com/api/latest/logs). This integration is the recommended path to achieve high throughput data ingestion, which will in turn provide more query and transaction events for greater workload observability.

<Note>
**This feature is in [preview](/docs/v23.2/cockroachdb-feature-availability)** and subject to change. To share feedback and/or issues, contact [Support](https://support.cockroachlabs.com/hc/en-us).
</Note>

## Step 1. Create a Datadog API key

1. In Datadog, navigate to [**Organization Settings &gt; API keys**](https://app.datadoghq.com/organization-settings/api-keys).
2. Follow the steps in the Datadog documentation on how to [add an API key](https://docs.datadoghq.com/account_management/api-app-keys#add-an-api-key-or-client-token).
3. Copy the newly created API key to be used in Step 2.

## Step 2. Configure an HTTP network collector for Datadog

Configure an [HTTP network collector](/docs/v23.2/configure-logs#output-to-http-network-collectors) by creating or modifying the [`logs.yaml` file](/docs/v23.2/configure-logs#yaml-payload).

In this `logs.yaml` example:

1. To send telemetry events directly to Datadog without writing events to disk, override telemetry default configuration by setting `file-groups: telemetry: channels:` to `[]`.

    <Warning>
    Given the [volume of `sampled_query` and `sampled_transaction` events](#step-3-configure-cockroachdb-to-emit-query-events), do not write these events to disk, or [`file-groups`](/docs/v23.2/configure-logs#output-to-files). Writing a high volume of `sampled_query` and `sampled_transaction` events to a file group will unnecessarily consume cluster resources and impact workload performance.
    </Warning>

    To disable the creation of a telemetry file and avoid writing `sampled_query` and `sampled_transaction` events and other [telemetry events](/docs/v23.2/eventlog#telemetry-events) to disk, change the telemetry `file-groups` setting from the [default of `channels: [TELEMETRY]`](/docs/v23.2/configure-logs#default-logging-configuration) to `channels: []`.
2. To connect to Datadog, replace `{DATADOG API KEY}` with the value you copied in Step 1.
3. To control the ingestion and potential drop rate for telemetry events, configure the following `buffering` values depending on your workload:

- `max-staleness`: The maximum time a log message will wait in the buffer before a flush is triggered. Set to `0` to disable flushing based on elapsed time. Default: `5s`
- `flush-trigger-size`: The number of bytes that will trigger the buffer to flush. Set to `0` to disable flushing based on accumulated size. Default: `1MiB`. In this example, override to `2.5MiB`.
- `max-buffer-size`: The maximum size of the buffer: new log messages received when the buffer is full cause older messages to be dropped. Default: `50MiB`

```yaml
sinks:
  http-servers:
    datadog:
      channels: [TELEMETRY]
      address: https://http-intake.logs.datadoghq.com/api/v2/logs
      format: json
      method: POST
      compression: gzip
      headers: {DD-API-KEY: "DATADOG_API_KEY"} # replace with actual DATADOG API key
      buffering:
        format: json-array
        max-staleness: 5s
        flush-trigger-size: 2.5MiB # override default value
        max-buffer-size: 50MiB
  file-groups: # override default configuration
    telemetry:  # do not write telemetry events to disk
      channels: [] # set to empty square brackets
```

<Tip>
If you prefer to keep the `DD-API-KEY` in a file other than the `logs.yaml`, replace the `headers` parameter with the [`file-based-headers` parameter](/docs/v23.2/configure-logs#file-based-headers):

```yaml
      file-based-headers: {DD-API-KEY: "path/to/file"} # replace with path of file containing DATADOG API key
```

The value in the file containing the Datadog API key can be updated without restarting the `cockroach` process. Instead, send SIGHUP to the `cockroach` process to notify it to refresh the value.
</Tip>

Pass the [`logs.yaml` file](/docs/v23.2/configure-logs#yaml-payload) to the `cockroach` process with either `--log-config-file` or `--log` flag.

## Step 3. Configure CockroachDB to emit query events

Enable the [`sql.telemetry.query_sampling.enabled` cluster setting](/docs/v23.2/cluster-settings#setting-sql-telemetry-query-sampling-enabled) so that executed queries will emit an event on the telemetry [logging channel](/docs/v23.2/logging-overview#logging-channels):

```sql
SET CLUSTER SETTING sql.telemetry.query_sampling.enabled = true;
```

Set the [`sql.telemetry.query_sampling.mode` cluster setting](/docs/v23.2/cluster-settings) to `statement` so that `sampled_query` events are emitted (`sampled_transaction` events will not be emitted):

```sql
SET CLUSTER SETTING sql.telemetry.query_sampling.mode = 'statement';
```

Configure the following [cluster setting](/docs/v23.2/cluster-settings) to a value that is dependent on the level of granularity you require and how much performance impact from frequent logging you can tolerate:

- [`sql.telemetry.query_sampling.max_event_frequency`](/docs/v23.2/cluster-settings#setting-sql-telemetry-query-sampling-max-event-frequency) (default `8`) is the max event frequency (events per second) at which we sample executed queries for telemetry. If sampling mode is set to `'transaction'`, this setting is ignored. In practice, this means that we only sample an executed query if 1/`max_event_frequency` seconds have elapsed since the last executed query was sampled. Sampling impacts the volume of query events emitted which can have downstream impact to workload performance and third-party processing costs. Slowly increase this sampling threshold and monitor potential impact.

    Logs are sampled for statements of type [DML (data manipulation language)](/docs/v23.2/sql-statements#data-manipulation-statements) or [TCL (transaction control language)](/docs/v23.2/sql-statements#transaction-control-statements).

    Logs are always captured for statements under the following conditions:

    - Statements that are not of type [DML (data manipulation language)](/docs/v23.2/sql-statements#data-manipulation-statements) or [TCL (transaction control language)](/docs/v23.2/sql-statements#transaction-control-statements). These statement types are:
        - [DDL (data definition language)](/docs/v23.2/sql-statements#data-definition-statements)
        - [DCL (data control language)](/docs/v23.2/sql-statements#data-control-statements)
    - Statements that are in [sessions with tracing enabled](/docs/v23.2/set-vars#set-tracing).
    - Statements that are from the [DB Console](/docs/v23.2/ui-overview) when [cluster setting `sql.telemetry.query_sampling.internal_console.enabled`](/docs/v23.2/cluster-settings) is `true` (default). These events have `ApplicationName` set to `$ internal-console`.

<Note>
The `sql.telemetry.query_sampling.max_event_frequency` cluster setting and the `buffering` options in the `logs.yaml` control how many events are emitted to Datadog and that can be potentially dropped. Adjust this setting and these options according to your workload, depending on the size of events and the queries per second (QPS) observed through monitoring.
</Note>

## Step 4. Configure CockroachDB to emit query and transaction events (optional)

Enable the [`sql.telemetry.query_sampling.enabled` cluster setting](/docs/v23.2/cluster-settings#setting-sql-telemetry-query-sampling-enabled) so that executed queries and transactions will emit an event on the telemetry [logging channel](/docs/v23.2/logging-overview#logging-channels):

```sql
SET CLUSTER SETTING sql.telemetry.query_sampling.enabled = true;
```

Set the [`sql.telemetry.query_sampling.mode` cluster setting](/docs/v23.2/cluster-settings) to `transaction` so that `sampled_query` and `sampled_transaction` events are emitted:

```sql
SET CLUSTER SETTING sql.telemetry.query_sampling.mode = 'transaction';
```

Configure the following [cluster settings](/docs/v23.2/cluster-settings) to values that are dependent on the level of granularity you require and how much performance impact from frequent logging you can tolerate:

- [`sql.telemetry.transaction_sampling.max_event_frequency`](/docs/v23.2/cluster-settings#setting-sql-telemetry-transaction-sampling-max-event-frequency) (default `8` ) is the max event frequency (events per second) at which we sample transactions for telemetry. If sampling mode is set to `'statement'`, this setting is ignored. In practice, this means that we only sample a transaction if 1/ `max_event_frequency` seconds have elapsed since the last transaction was sampled. Sampling impacts the volume of transaction events emitted which can have downstream impact to workload performance and third-party processing costs. Slowly increase this sampling threshold and monitor potential impact.
- [`sql.telemetry.transaction_sampling.statement_events_per_transaction.max`](/docs/v23.2/cluster-settings#setting-sql-telemetry-transaction-sampling-statement-events-per-transaction-max) (default `50`) is the maximum number of statement events to log for every sampled transaction. Note that statements that are always captured do not adhere to this limit.

    Logs are always captured for statements under the following conditions:

    - Statements that are not of type [DML (data manipulation language)](/docs/v23.2/sql-statements#data-manipulation-statements) or [TCL (transaction control language)](/docs/v23.2/sql-statements#transaction-control-statements). These statement types are:
        - [DDL (data definition language)](/docs/v23.2/sql-statements#data-definition-statements)
        - [DCL (data control language)](/docs/v23.2/sql-statements#data-control-statements)
    - Statements that are in [sessions with tracing enabled](/docs/v23.2/set-vars#set-tracing).
    - Statements that are from the [DB Console](/docs/v23.2/ui-overview) when [cluster setting `sql.telemetry.query_sampling.internal_console.enabled`](/docs/v23.2/cluster-settings) is `true` (default). These events have `ApplicationName` set to `$ internal-console`.

### Correlating query events with a specific transaction

Each `sampled_query` and `sampled_transaction` event has an `event.TransactionID` attribute. To correlate a `sampled_query` with a specific `sampled_transaction`, filter for a given value of this attribute.

## Step 5. Monitor TELEMETRY logs in Datadog

1. Navigate to [**Datadog &gt; Logs**](https://app.datadoghq.com/logs).
2. Search for `@event.EventType:(sampled_query OR sampled_transaction)` to see the logs for the query and transaction events that are emitted. For example:

<Frame>
  ![Datadog Telemetry Logs](/images/v23.2/datadog-telemetry-logs.png)
</Frame>

## See also

- [Notable Event Types](/docs/v23.2/eventlog)
- [Configure logs](/docs/v23.2/configure-logs)
- [Cluster Settings](/docs/v23.2/cluster-settings)
